--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pi-collapse-tools",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Pi extension that hides tool output by default (expand with Cmd+O / Ctrl+O).",
   "license": "MIT",
   "author": "xryul",
@@ -18,7 +18,8 @@
     "pi-extension"
   ],
   "pi": {
-    "extensions": ["./collapse-tools.ts"]
+    "extensions": ["./collapse-tools.ts"],
+    "image": "https://raw.githubusercontent.com/xRyul/pi-collapse-tools/main/assets/demo.webp"
   },
   "peerDependencies": {
     "@mariozechner/pi-coding-agent": "*",
